# SoftGL

./: .gitignore  .hgignore  CMakeLists.txt  README.md  softgl.pro  softgl.sln
Demo_Graphics2D/: Demo_Graphics2D.cpp  Demo_Graphics2D.vcxproj
Demo_TexturedTriangle/: CMakeLists.txt  Demo_TexturedTriangle.vcxproj  app.cpp
SoftGL/: Bitmap.h  BlockRasterizer.cpp  BlockRasterizer.h  BlockRasterizerTest.cpp  Buffer.h  Camera.h  Debug.h  DisplayMode.h  FFP.h  FFPLight.h  FpsCounter.h  Graphics2D.h  IRenderWindow.h  IShader.h  ITexture2D.h  IndexBuffer.h  Inline.h  InputLayout.h  LMath.h  LMath_.h  LString.h  Matrix3x3.h  Matrix4x4.h  Mesh.cpp  Mesh.h  PSDefault.h  PSFont.h  PSTextured.h  PixelShader.h  Plane.h  Plane_.h  Primitive.h  Quaternion.h  RasterizerSettings.h  Ray.h  RegisterBlock.h  RenderWindow.cpp  RenderWindow.h  RenderWindowXORG.cpp  RenderWindowXORG.h  (+27 more)
Src/SoftGL/: BlockRasterizer.cpp  BlockRasterizer.h  Buffer.h  CMakeLists.txt  Debug.h  FpsCounter.h  Graphics2D.h  IRenderWindow.h  IShader.h  ImageDataAccessorR5G6B5.h  ImageDataAccessorR8G8B8.h  IndexBuffer.h  InputLayout.h  InputSystem.h  PSDefault.h  PSDefaultColor.h  PSFont.h  PixelShader.h  RasterizerSettings.h  RegisterBlock.h  RenderWindow.cpp  RenderWindowXORG.cpp  SoftGL.pro  StaticTexture.h  Texture.h  VSDefault.h  VSScreenSpace.h  Vertex.h  config.h  dynamic_buffer.h  mip_utils.h  softgl.vcxproj  static_mip_chain.h  texture_utils.h
Src/SoftGL/BRDF/: lighting_core.h
Src/SoftGL/Engine/: FpsCounter.h  PsNormalMap.h  camera.h  camera_controller.h  cube_generator.h  gameobject.h  imesh.h  plane_generator.h  transform.h
Src/SoftGL/Engine/shaders/: textured_no_lit.h
Src/SoftGL/Platform/Linux/: RenderWindowXORG.h
Src/SoftGL/Platform/Windows/: RenderWindow.cpp  RenderWindow.h
Test/: Test.cpp  Test.vcxproj
softgl_demo_framework/: PsNormalMap.h  camera.h  camera_controller.h  cube_generator.h  fresnel.h  imesh.h  lighting_core.h  mesh.h  softgl_demo_framework.vcxproj  transform.h
